LionsTruck/force-app/main/default/objects/L_ServiceInteraction__c/L_ServiceInteraction__c.object-meta.xml
<CustomObject>
    <description>To Track Truck Service Interactions by Client</description>
    <label>Service Interaction</label>
    <nameField>
        <label>Service Interaction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Interactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>