LionsTruck/force-app/main/default/objects/L_ServiceInteraction__c/fields/L_AccountId__c.field-meta.xml
<CustomField>
    <fullName>L_AccountId__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Service Interactions</relationshipLabel>
    <relationshipName>Service_Interactions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>