LionsTruck/force-app/main/default/objects/L_ServiceInteraction__c/fields/L_Asset__c.field-meta.xml
<CustomField>
    <fullName>L_Asset__c</fullName>
    <label>Asset</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Asset.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.L_AccountId__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Service Interactions</relationshipLabel>
    <relationshipName>Service_Interactions</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>