LionsTruck/force-app/main/default/objects/L_ServiceInteraction__c/fields/L_Description__c.field-meta.xml
<CustomField>
    <fullName>L_Description__c</fullName>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>