LionsTruck/force-app/main/default/objects/L_ServiceInteraction__c/fields/L_InterventionDate__c.field-meta.xml
<CustomField>
    <fullName>L_InterventionDate__c</fullName>
    <description>To track when was the service interaction</description>
    <label>Intervention Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>